Added Navigation and Hero Section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,51 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body>
+    <header class="">
+        <!--Navigation Section -->
+        <nav class="flex justify-between items-center px-6 py-3 bg-white shadow">
+      <!-- Logo -->
+      <div class="flex items-center gap-2">
+        <img class="w-10 h-10" src="assets/logo.png" alt="Logo">
+        <h2 class="text-md sm:text-lg font-bold text-green-900 leading-tight">
+          Emergency <br> Service
+        </h2>
+      </div>
+      <!-- Navigation-Side -->
+      <div class="flex items-center gap-3">
+        <!-- Love -->
+        <div class="flex items-center gap-1 bg-green-50 px-3 py-1 rounded-full">
+          <span class="font-bold text-sm">0</span>
+          <img class="w-5 h-5" src="assets/heart.png" alt="Love">
+        </div>
+        <!-- Coin -->
+        <div class="flex items-center gap-1 bg-green-50 px-3 py-1 rounded-full">
+          <span class="font-bold text-sm">100</span>
+          <img class="w-5 h-5" src="assets/coin.png" alt="Coin">
+        </div>
+        <!-- Copy Button -->
+        <button class="flex items-center gap-1 bg-green-600 hover:bg-green-700 text-white font-bold px-4 py-2 rounded-full transition">
+          <span>2</span>
+          Copy
+        </button>
+      </div>
+    </nav>
+    <!--Hero-Section-->
+    <section class="bg-gradient-to-r from-green-800 via-green-600 to-green-800 text-center text-white py-12">
+    <div class="flex justify-center mb-4">
+      <img src="assets/logo.png" alt="Bangladesh Logo" class="w-20 h-20">
+    </div>
+    <h1 class="text-2xl sm:text-3xl font-bold">
+      Emergency Service Directory
+    </h1>
+    <p class="mt-2 text-sm sm:text-base max-w-2xl mx-auto">
+      Government Emergency Services at Your Fingertip – A Project by Government of the People's Republic of Bangladesh
+    </p>
+  </section>
+    </header>
+    <main>
+
+    </main>
 
 </body>
 </html>
